--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1054.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2"
   }
