--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
-    "express-router": "0.0.1"
+    "express-router": "0.0.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
+    "path": "^0.12.7",
+    "uuid": "^7.0.3"
   }
 }
