--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.2.0",
     "express-router": "0.0.1",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "path": "^0.12.7",
+    "request-ip": "^2.1.3",
     "uuid": "^7.0.3"
   }
 }
